--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "homepage": "https://byenzinnn.github.io/proj-form-AEDL",
   "dependencies": {
     "animejs": "^3.2.2",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.13"
   },
